# SlippingDipping

./: Cargo.toml  config.toml  readme.md  wallets.json
..bfg-report/2025-05-31/22-59-13/: cache-stats.txt  changed-files.txt
..bfg-report/2025-05-31/23-01-28/: cache-stats.txt  object-id-map.old-new.txt
..bfg-report/2025-05-31/23-01-28/protected-dirt/: 0558b601-HEAD.csv
contract/: deploy.sh  foundry.toml
contract/broadcast/DipperDeploy.s.sol/1/: run-1726596038.json  run-1726596141.json  run-1726597379.json  run-1726597395.json  run-1726597689.json  run-1726597758.json  run-1726601507.json  run-1726602410.json  run-1726603992.json  run-1726604139.json  run-1726604187.json  run-1726607159.json  run-1726607264.json  run-1726611083.json  run-1726613436.json  run-1726613681.json  run-1726619629.json  run-1726853006.json  run-latest.json
contract/script/: DipperDeploy.s.sol
contract/src/: Dipper.sol  Dipper2.sol  Interfaces.sol  Sniper.sol
contract/test/: DipperTest.t.sol  SniperTest.sol
src/: globals.rs  main.rs
src/api/: mod.rs
src/api/mev_builders/: broadcast.rs  builder.rs  mod.rs  types.rs
src/api/sell_stream/: methods.rs  mod.rs  types.rs
src/api/simulate/: actions.rs  actors.rs  helpers.rs  mod.rs
src/api/strategies/: blockzero_dipper.rs  m1.rs  mod.rs
src/api/utils/: dipper.rs  erc20.rs  mod.rs
src/config/: mod.rs
src/config/general/: mod.rs
src/config/wallet/: mod.rs  types.rs
src/license/: mod.rs
